# difflicious

./: .#TODO.org  .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPING.md  Dockerfile  INSTALLATION.md  PLAN.md  PR_DESCRIPTION.md  README.md  TODO.org  cilicious.sh  cli.spec  foobar  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.cjs  test_api.py  test_api_detailed.py  test_frontend.py  test_parser.py  test_rendering_parser.py  test_side_by_side.py
.github/workflows/: check-version-bump.yml  ci.yml  docker-publish.yml  pages.yml  pypi-publish.yml
doc/plans/: 2025-07-29-1015-expandable-context-feature.md
doc/proposals/: 2025-07-30-1230-reusable-template-components-investigation.md  2025-07-30-1400-reusable-template-components-implementation.md  2025-08-19-1430-dark-light-mode-implementation.md
doc/reports/: 2025-07-29-2100-context-expansion-extraction-report.md  2025-07-31-2115-virtual-scrolling-implementation-attempt.md
docs/: 2025-11-18-alpine-component-architecture.md  CSS-STYLE-GUIDE.md  TROUBLESHOOTING.md  _config.yml  javascript-modularization-plan.md  presentation-layer-separation.md  tailwind-design-system.md
docs/notes/: 2025-11-18-alpine-js-migration-progress.md  2025-11-18-alpine-js-migration-status.md
docs/plans/: 2025-11-04-2318-gitpython-migration-plan.md  2025-11-22-1.0-release-execution-plan.md  2026-04-12-presentation-layer-separation.md
docs/proposals/: 2025-11-17-2004-auto-reload-implementation-plan.md  2025-11-18-0130-alpine-js-dom-manipulation.md  auto-reload-on-file-changes.md
docs/reference/: app.js.reference
docs/reports/: 2025-10-31-1720-0.9-release-plan.md  2025-11-05-color-audit.md  2025-11-05-css-rationalization-analysis.md  2025-11-05-phase2-implementation-plan.md  2025-11-17-codebase-improvements-analysis.md  2026-02-05-v1.0-release-readiness-audit.md
docs/sessions/: 2025-11-18-0130-alpine-js-migration-implementation.md
docs/site/: _config.yml  index.md
docs/themes/: theme-palettes.md
scripts/: screenshot.py
src/difflicious/: __init__.py  app.py  cli.py  config.py  diff_parser.py  git_operations.py  logging_config.py
tests/: __init__.py  conftest.py  sample_01.word.diff  test_app.py  test_auto_reload_routes.py  test_cli.py  test_git_operations.py  test_logging_config.py
tests/integration/: conftest.py  test_api.py  test_api_detailed.py  test_frontend.py
tests/js/: auto-reload.test.js  context-expansion-ui.test.js  context-expansion.test.js  context-manager.test.js  design-system.test.js  diff-state-persistence.test.js  diff-state-persistence.test.js.old  diffStore-actions.test.js  dom-utils.test.js  full-diff.test.js  navigation.test.js  package-lock.json  package.json  search.test.js  setup-tests.js  setup.js  toolbar.test.js  virtual-scroller.test.js
(+80 files in other folders)
