[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "difflicious"
dynamic = ["version"]
description = "A sleek web-based git diff visualization tool for developers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Drew"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: General",
]
keywords = ["git", "diff", "visualization", "web", "development"]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0,<3.0",
    "click>=8.0.0,<9.0",
    "unidiff>=0.7.5,<1.0",
    "Pygments>=2.17.0,<3.0",
    "MarkupSafe>=2.1.0,<3.0",
    "jinja-partials>=0.2.0,<1.0",
    "GitPython>=3.1.40,<4.0",
    "watchdog>=3.0.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/insipid/difflicious"
Repository = "https://github.com/insipid/difflicious"
Issues = "https://github.com/insipid/difflicious/issues"
Documentation = "https://github.com/insipid/difflicious#readme"
Changelog = "https://github.com/insipid/difflicious/blob/main/CHANGELOG.md"

[project.scripts]
difflicious = "difflicious.cli:main"

[tool.hatch.version]
path = "src/difflicious/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/difflicious"]

[tool.ruff]
target-version = "py39"
line-length = 88  # Aligned with Black's default for consistency
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # Line too long - handled by Black where possible
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements in tests

[tool.black]
target-version = ['py39']
line-length = 88  # Black's default, widely accepted standard

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/difflicious"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.5",
    "types-pygments>=2.19.0.20250715",
    "types-unidiff>=0.7.0.20240505",
]
publish = [
    "twine>=6.2.0",
]
